# Rusty-Capture

./: .gitignore  Cargo.toml  README.md
src/: hotkey_module.rs  main.rs  screenshots_module.rs  settings_module.rs  state_module.rs
