[package]
name = "rusty_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0" 
arboard = "3.2.0"
chrono = "0.4.26"
global-hotkey = "0.2.3"
image = "0.24.6"
screenshots = "0.7.0"
thiserror = "1.0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imageproc = "0.23.0"
rusttype = "0.9.3"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 2
